kube/develop/node-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saas

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
