kube/develop/argoCD-custom.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd

---

apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: LoadBalancer
