kube/develop/mimir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: mimir-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: mimir-container
          image: grafana/mimir:latest
          ports:
            - containerPort: 3300

---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: mimir-service
spec:
  selector:
    app: mimir
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3300
