kube/develop/saas-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: saas
  name: saas-bff-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-bff-deployment
  template:
    metadata:
      labels:
        app: saas-bff-deployment
    spec:
      containers:
        - name: saas-bff-container
          image: 794187215716.dkr.ecr.***.amazonaws.com/saas-bff:develop-4718006df492a409684dc0849cb2a3e20fcb2f3e
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: aws-ecr-repo

---
apiVersion: v1
kind: Service
metadata:
  namespace: saas
  name: saas-bff-service
spec:
  selector:
    app: saas-bff-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000
  type: NodePort
