kube/develop/tempo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-deployment
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo-container
          image: grafana/tempo:latest
          ports:
            - containerPort: 3200
---
apiVersion: v1
kind: Service
metadata:
  name: tempo-service
  namespace: monitoring
spec:
  selector:
    app: tempo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3200
