kube/develop/ingress-nginx-custom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-argocd"
spec:
  tls:
    - hosts:
        - argocd.jumpsoft.store
      secretName: argocd-tls
  rules:
    - host: argocd.jumpsoft.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
  namespace: saas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-bff"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.jumpsoft.shop"
spec:
  tls:
    - hosts:
        - api.jumpsoft.store
      secretName: tls-secret  # cert-manager가 자동으로 생성할 시크릿 이름
  rules:
    - host: api.jumpsoft.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saas-bff-service
                port:
                  number: 80
