kube/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://d1qq5lqzvit9i9.cloudfront.net"
spec:
  rules:
    - http:
        paths:
          - path: /api/geo/location
            pathType: Prefix
            backend:
              service:
                name: saas-bff-service
                port:
                  number: 80
